[package]
name = "calculator"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"

[dependencies]
calculate = { git = "https://gitlab.redox-os.org/redox-os/calc.git" }
lazy_static = "1.4.0"
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }

[features]
light = []

[package.metadata.bundle]
name = "OrbCalculator"
identifier = "redox-os.orbcalculator"
short_description = "Calculator written in rust, developed with OrbTk."